// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Admin dashboard page Renders Manage role Page 1`] = `
Array [
  <div
    className="h-screen w-screen z-20 bg-black bg-opacity-30 backdrop-blur-sm absolute flex items-center justify-center px-4 hidden"
  >
    <div
      className="bg-white dark:bg-dark-bg w-full sm:w-3/4 md:w-1/2  xl:w-4/12 rounded-lg p-4 pb-8"
    >
      <div
        className="card-title w-full flex  flex-wrap justify-center items-center  "
      >
        <h3
          className="font-bold text-sm dark:text-white text-center w-11/12"
        >
          Add Trainee
        </h3>
        <hr
          className=" bg-primary border-b my-3 w-full"
        />
      </div>
      <div
        className="card-body"
      >
        <form
          className=" py-3 px-8"
        >
          <div
            className="input my-3 h-9 "
          >
            <div
              className="grouped-input flex items-center h-full w-full rounded-md"
            >
              <input
                className="dark:bg-dark-tertiary border border-primary rounded outline-none px-5 font-sans text-xs py-2 w-full"
                name="name"
                placeholder="name"
                type="text"
              />
            </div>
          </div>
          <div
            className="input my-3 h-9 "
          >
            <div
              className="grouped-input flex items-center h-full w-full rounded-md"
            >
              <input
                className="dark:bg-dark-tertiary border border-primary py-2 rounded outline-none px-5 font-sans text-xs w-full"
                name="email"
                placeholder="email"
                type="email"
              />
            </div>
          </div>
          <div
            className="input my-3 h-9 "
          >
            <div
              className="grouped-input flex items-center h-full w-full rounded-md"
            >
              <input
                className="dark:bg-dark-tertiary border border-primary py-2 rounded outline-none px-5 font-sans text-xs w-full"
                name="cohort"
                placeholder="cohort"
                type="text"
              />
            </div>
          </div>
          <div
            className="input my-3 h-9 "
          >
            <div
              className="grouped-input flex items-center h-full w-full rounded-md"
            >
              <input
                className="dark:bg-dark-tertiary border border-primary py-2 rounded outline-none px-5 font-sans text-xs w-full"
                name="program"
                placeholder="program"
                type="text"
              />
            </div>
          </div>
          <div
            className="w-full flex justify-between"
          >
            <button
              className="btn info sm w-[30%] md:w-1/4 text-sm font-sans"
              onClick={[Function]}
            >
               
              Cancel
               
            </button>
            <button
              className="btn primary sm w-[30%] md:w-1/4 text-sm font-sans"
            >
               
              Save
               
            </button>
          </div>
        </form>
      </div>
    </div>
  </div>,
  <div
    className="min-h-screen w-screen z-30 bg-black bg-opacity-30 backdrop-blur-sm fixed flex items-center justify-center px-4 hidden"
  >
    <div
      className="bg-white dark:bg-dark-bg w-full sm:w-3/4 md:w-1/2  xl:w-4/12 rounded-lg p-4 pb-8"
    >
      <div
        className="card-title w-full flex  flex-wrap justify-center items-center  "
      >
        <h3
          className="font-bold text-sm text-gray-700 dark:text-white text-center w-11/12"
        >
          Removerole
        </h3>
        <hr
          className=" bg-primary border-b my-3 w-full"
        />
      </div>
      <div
        className="card-body"
      >
        <form
          className=" py-3 px-8"
        >
          <div>
            <h2
              className="text-base dark:text-white text-center m-4"
            >
              suredelete
            </h2>
          </div>
          <div
            className="w-full flex justify-between"
          >
            <button
              className="btn info sm w-[30%] md:w-1/4 text-sm font-sans"
              data-testid="delete"
              onClick={[Function]}
            >
               
              Cancel
               
            </button>
            <button
              className="btn danger sm w-[30%] md:w-1/4 text-sm font-sans"
            >
               
              Delete
               
            </button>
          </div>
        </form>
      </div>
    </div>
  </div>,
  <div
    className="bg-light-bg dark:bg-dark-frame-bg min-h-screen pb-16"
  >
    <div
      className="px-3 md:px-8"
    >
      <div
        className="bg-white dark:bg-dark-bg shadow-lg lg:px-5 pt-6 md:pb-6 mt-20 lg:mt-28 rounded-md w-full lg:w-[80%] lg:ml-60"
      >
        <div
          className=" flex items-center justify-between pb-6"
        >
          <div>
            <h2
              className="text-gray-800 dark:text-white font-semibold mb-3 px-2"
            >
              Manageaccess
            </h2>
            <div
              className="flex flex-cols items-center w-full justify-around"
            >
              <div
                className="flex cursor-pointer "
              >
                <div
                  className="px-2 py-3 underline text-primary hover:underline hover:text-primary"
                  onClick={[Function]}
                >
                  All
                </div>
                <div
                  className="px-2 py-3 hover:underline hover:text-primary dark:text-white"
                  onClick={[Function]}
                >
                  Admins
                </div>
                <div
                  className="px-2 py-3 hover:underline hover:text-primary dark:text-white"
                  onClick={[Function]}
                >
                  Coordinator
                </div>
                <div
                  className="px-2 py-3 hover:underline hover:text-primary dark:text-white"
                  onClick={[Function]}
                >
                  Trainees
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="flex justify-between items-center space-x-8 px-3"
        >
          <div
            className="relative mt-1"
          >
            <div
              className="absolute inset-y-0 left-0 flex items-center pl-3 pointer-events-none"
            >
              <svg
                className="w-5 h-5 text-gray-500 dark:text-white"
                fill="currentColor"
                viewBox="0 0 20 20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clipRule="evenodd"
                  d="M8 4a4 4 0 100 8 4 4 0 000-8zM2 8a6 6 0 1110.89 3.476l4.817 4.817a1 1 0 01-1.414 1.414l-4.816-4.816A6 6 0 012 8z"
                  fillRule="evenodd"
                />
              </svg>
            </div>
            <input
              className="bg-gray-50 dark:bg-dark-tertiary border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary focus:border-primary block w-44 md:w-80 pl-10 p-2.5 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary dark:focus:border-primary"
              onChange={[Function]}
              placeholder="Search by Name or Status"
              value=""
            />
          </div>
          <button
            className="btn primary lg px-2"
          >
             
            AddMember
             
          </button>
        </div>
        <div>
          <div
            className="-mx-4 sm:-mx-8 px-4 sm:px-8 py-4 overflow-x-auto"
          >
            <div
              className="inline-block w-full lg:min-w-full shadow rounded-lg overflow-hidden"
            >
              <table
                className="min-w-full leading-normal"
              >
                <thead>
                  <tr>
                    <th
                      className="py-6 px-5 md:px-12 border-b-2 border-gray-200 bg-gray-100 dark:bg-dark-tertiary text-left text-xs font-semibold text-gray-600 dark:text-white uppercase tracking-wider"
                    >
                      name
                    </th>
                    <th
                      className="py-[26px] px-5 border-b-2 border-gray-200 bg-gray-100 dark:bg-dark-tertiary text-left text-xs font-semibold text-gray-600 dark:text-white uppercase tracking-wider"
                    >
                      Status
                    </th>
                    <th
                      className="px-5 py-3 border-b-2 border-gray-200 bg-gray-100 dark:bg-dark-tertiary text-left text-xs font-semibold text-gray-600 dark:text-white uppercase tracking-wider"
                    >
                      Role
                    </th>
                    <th
                      className="px-5 py-3 border-b-2 border-gray-200 bg-gray-100 dark:bg-dark-tertiary text-left text-xs font-semibold text-gray-600 dark:text-white uppercase tracking-wider"
                    >
                      Action
                    </th>
                  </tr>
                </thead>
                <tbody>
                  <tr
                    className="bg-white dark:bg-dark-bg"
                  >
                    <td
                      className="border-b border-gray-200 py-2"
                    >
                      <div
                        className="flex items-left"
                      >
                        <span
                          className="hidden  ml-2 md:inline-block h-10 w-10 rounded-full overflow-hidden bg-gray-100 dark:bg-dark-tertiary"
                        >
                          <svg
                            className="h-full w-full text-gray-300 dark:text-white"
                            fill="currentColor"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M24 20.993V24H0v-2.996A14.977 14.977 0 0112.004 15c4.904 0 9.26 2.354 11.996 5.993zM16.002 8.999a4 4 0 11-8 0 4 4 0 018 0z"
                            />
                          </svg>
                        </span>
                        <div
                          className="flex flex-col  leading-4 px-3 py-2"
                        >
                          <h3
                            className="dark:text-white sm:text-xs"
                          >
                            Keza Alice
                          </h3>
                          <p
                            className="text-sm sm:text-xs text-gray-400 dark:text-white"
                          >
                            keza@gmail.com
                          </p>
                        </div>
                      </div>
                    </td>
                    <td
                      className="py-3 px-5 border-b border-gray-200  text-sm sm:text-xs"
                    >
                      <p
                        className="text-green-500 whitespace-no-wrap"
                      >
                        Active
                      </p>
                    </td>
                    <td
                      className="px-5 py-3 border-b border-gray-200  text-sm"
                    >
                      <div
                        className="whitespace-no-wrap flex justify-left"
                      >
                        <div
                          className="xl:w-24"
                        >
                          admin
                        </div>
                      </div>
                    </td>
                    <td
                      className="px-5 py-3 border-b border-gray-200  text-[9px] md:text-sm"
                    >
                      <p
                        className="text-red-500 whitespace-no-wrap cursor-pointer"
                        onClick={[Function]}
                      >
                        Remove
                      </p>
                    </td>
                  </tr>
                  <tr
                    className="bg-light-bg dark:bg-dark-tertiary"
                  >
                    <td
                      className="border-b border-gray-200 py-2"
                    >
                      <div
                        className="flex items-left"
                      >
                        <span
                          className="hidden  ml-2 md:inline-block h-10 w-10 rounded-full overflow-hidden bg-gray-100 dark:bg-dark-tertiary"
                        >
                          <svg
                            className="h-full w-full text-gray-300 dark:text-white"
                            fill="currentColor"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M24 20.993V24H0v-2.996A14.977 14.977 0 0112.004 15c4.904 0 9.26 2.354 11.996 5.993zM16.002 8.999a4 4 0 11-8 0 4 4 0 018 0z"
                            />
                          </svg>
                        </span>
                        <div
                          className="flex flex-col  leading-4 px-3 py-2"
                        >
                          <h3
                            className="dark:text-white sm:text-xs"
                          >
                            cyifuzo Didider
                          </h3>
                          <p
                            className="text-sm sm:text-xs text-gray-400 dark:text-white"
                          >
                            cyifuzo@gmail.com
                          </p>
                        </div>
                      </div>
                    </td>
                    <td
                      className="py-3 px-5 border-b border-gray-200  text-sm sm:text-xs"
                    >
                      <p
                        className="text-green-500 whitespace-no-wrap"
                      >
                        Active
                      </p>
                    </td>
                    <td
                      className="px-5 py-3 border-b border-gray-200  text-sm"
                    >
                      <div
                        className="whitespace-no-wrap flex justify-left"
                      >
                        <div
                          className="xl:w-24"
                        >
                          admin
                        </div>
                      </div>
                    </td>
                    <td
                      className="px-5 py-3 border-b border-gray-200  text-[9px] md:text-sm"
                    >
                      <p
                        className="text-red-500 whitespace-no-wrap cursor-pointer"
                        onClick={[Function]}
                      >
                        Remove
                      </p>
                    </td>
                  </tr>
                  <tr
                    className="bg-white dark:bg-dark-bg"
                  >
                    <td
                      className="border-b border-gray-200 py-2"
                    >
                      <div
                        className="flex items-left"
                      >
                        <span
                          className="hidden  ml-2 md:inline-block h-10 w-10 rounded-full overflow-hidden bg-gray-100 dark:bg-dark-tertiary"
                        >
                          <svg
                            className="h-full w-full text-gray-300 dark:text-white"
                            fill="currentColor"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M24 20.993V24H0v-2.996A14.977 14.977 0 0112.004 15c4.904 0 9.26 2.354 11.996 5.993zM16.002 8.999a4 4 0 11-8 0 4 4 0 018 0z"
                            />
                          </svg>
                        </span>
                        <div
                          className="flex flex-col  leading-4 px-3 py-2"
                        >
                          <h3
                            className="dark:text-white sm:text-xs"
                          >
                            Kaka Makombe
                          </h3>
                          <p
                            className="text-sm sm:text-xs text-gray-400 dark:text-white"
                          >
                            kaka@gmail.com
                          </p>
                        </div>
                      </div>
                    </td>
                    <td
                      className="py-3 px-5 border-b border-gray-200  text-sm sm:text-xs"
                    >
                      <p
                        className="text-green-500 whitespace-no-wrap"
                      >
                        Active
                      </p>
                    </td>
                    <td
                      className="px-5 py-3 border-b border-gray-200  text-sm"
                    >
                      <div
                        className="whitespace-no-wrap flex justify-left"
                      >
                        <div
                          className="xl:w-24"
                        >
                          coordinator
                        </div>
                      </div>
                    </td>
                    <td
                      className="px-5 py-3 border-b border-gray-200  text-[9px] md:text-sm"
                    >
                      <p
                        className="text-red-500 whitespace-no-wrap cursor-pointer"
                        onClick={[Function]}
                      >
                        Remove
                      </p>
                    </td>
                  </tr>
                  <tr
                    className="bg-light-bg dark:bg-dark-tertiary"
                  >
                    <td
                      className="border-b border-gray-200 py-2"
                    >
                      <div
                        className="flex items-left"
                      >
                        <span
                          className="hidden  ml-2 md:inline-block h-10 w-10 rounded-full overflow-hidden bg-gray-100 dark:bg-dark-tertiary"
                        >
                          <svg
                            className="h-full w-full text-gray-300 dark:text-white"
                            fill="currentColor"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M24 20.993V24H0v-2.996A14.977 14.977 0 0112.004 15c4.904 0 9.26 2.354 11.996 5.993zM16.002 8.999a4 4 0 11-8 0 4 4 0 018 0z"
                            />
                          </svg>
                        </span>
                        <div
                          className="flex flex-col  leading-4 px-3 py-2"
                        >
                          <h3
                            className="dark:text-white sm:text-xs"
                          >
                            Keza Alice
                          </h3>
                          <p
                            className="text-sm sm:text-xs text-gray-400 dark:text-white"
                          >
                            keza@gmail.com
                          </p>
                        </div>
                      </div>
                    </td>
                    <td
                      className="py-3 px-5 border-b border-gray-200  text-sm sm:text-xs"
                    >
                      <p
                        className="text-green-500 whitespace-no-wrap"
                      >
                        Active
                      </p>
                    </td>
                    <td
                      className="px-5 py-3 border-b border-gray-200  text-sm"
                    >
                      <div
                        className="whitespace-no-wrap flex justify-left"
                      >
                        <div
                          className="xl:w-24"
                        >
                          trainee
                        </div>
                      </div>
                    </td>
                    <td
                      className="px-5 py-3 border-b border-gray-200  text-[9px] md:text-sm"
                    >
                      <p
                        className="text-red-500 whitespace-no-wrap cursor-pointer"
                        onClick={[Function]}
                      >
                        Remove
                      </p>
                    </td>
                  </tr>
                  <tr
                    className="bg-white dark:bg-dark-bg"
                  >
                    <td
                      className="border-b border-gray-200 py-2"
                    >
                      <div
                        className="flex items-left"
                      >
                        <span
                          className="hidden  ml-2 md:inline-block h-10 w-10 rounded-full overflow-hidden bg-gray-100 dark:bg-dark-tertiary"
                        >
                          <svg
                            className="h-full w-full text-gray-300 dark:text-white"
                            fill="currentColor"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M24 20.993V24H0v-2.996A14.977 14.977 0 0112.004 15c4.904 0 9.26 2.354 11.996 5.993zM16.002 8.999a4 4 0 11-8 0 4 4 0 018 0z"
                            />
                          </svg>
                        </span>
                        <div
                          className="flex flex-col  leading-4 px-3 py-2"
                        >
                          <h3
                            className="dark:text-white sm:text-xs"
                          >
                            Ella Didider
                          </h3>
                          <p
                            className="text-sm sm:text-xs text-gray-400 dark:text-white"
                          >
                            kdidier@gmail.com
                          </p>
                        </div>
                      </div>
                    </td>
                    <td
                      className="py-3 px-5 border-b border-gray-200  text-sm sm:text-xs"
                    >
                      <p
                        className="text-green-500 whitespace-no-wrap"
                      >
                        Active
                      </p>
                    </td>
                    <td
                      className="px-5 py-3 border-b border-gray-200  text-sm"
                    >
                      <div
                        className="whitespace-no-wrap flex justify-left"
                      >
                        <div
                          className="xl:w-24"
                        >
                          trainee
                        </div>
                      </div>
                    </td>
                    <td
                      className="px-5 py-3 border-b border-gray-200  text-[9px] md:text-sm"
                    >
                      <p
                        className="text-red-500 whitespace-no-wrap cursor-pointer"
                        onClick={[Function]}
                      >
                        Remove
                      </p>
                    </td>
                  </tr>
                  <tr
                    className="bg-light-bg dark:bg-dark-tertiary"
                  >
                    <td
                      className="border-b border-gray-200 py-2"
                    >
                      <div
                        className="flex items-left"
                      >
                        <span
                          className="hidden  ml-2 md:inline-block h-10 w-10 rounded-full overflow-hidden bg-gray-100 dark:bg-dark-tertiary"
                        >
                          <svg
                            className="h-full w-full text-gray-300 dark:text-white"
                            fill="currentColor"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M24 20.993V24H0v-2.996A14.977 14.977 0 0112.004 15c4.904 0 9.26 2.354 11.996 5.993zM16.002 8.999a4 4 0 11-8 0 4 4 0 018 0z"
                            />
                          </svg>
                        </span>
                        <div
                          className="flex flex-col  leading-4 px-3 py-2"
                        >
                          <h3
                            className="dark:text-white sm:text-xs"
                          >
                            Kaka Makombe
                          </h3>
                          <p
                            className="text-sm sm:text-xs text-gray-400 dark:text-white"
                          >
                            kaka@gmail.com
                          </p>
                        </div>
                      </div>
                    </td>
                    <td
                      className="py-3 px-5 border-b border-gray-200  text-sm sm:text-xs"
                    >
                      <p
                        className="text-green-500 whitespace-no-wrap"
                      >
                        Active
                      </p>
                    </td>
                    <td
                      className="px-5 py-3 border-b border-gray-200  text-sm"
                    >
                      <div
                        className="whitespace-no-wrap flex justify-left"
                      >
                        <div
                          className="xl:w-24"
                        >
                          coordinator
                        </div>
                      </div>
                    </td>
                    <td
                      className="px-5 py-3 border-b border-gray-200  text-[9px] md:text-sm"
                    >
                      <p
                        className="text-red-500 whitespace-no-wrap cursor-pointer"
                        onClick={[Function]}
                      >
                        Remove
                      </p>
                    </td>
                  </tr>
                  <tr
                    className="bg-white dark:bg-dark-bg"
                  >
                    <td
                      className="border-b border-gray-200 py-2"
                    >
                      <div
                        className="flex items-left"
                      >
                        <span
                          className="hidden  ml-2 md:inline-block h-10 w-10 rounded-full overflow-hidden bg-gray-100 dark:bg-dark-tertiary"
                        >
                          <svg
                            className="h-full w-full text-gray-300 dark:text-white"
                            fill="currentColor"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M24 20.993V24H0v-2.996A14.977 14.977 0 0112.004 15c4.904 0 9.26 2.354 11.996 5.993zM16.002 8.999a4 4 0 11-8 0 4 4 0 018 0z"
                            />
                          </svg>
                        </span>
                        <div
                          className="flex flex-col  leading-4 px-3 py-2"
                        >
                          <h3
                            className="dark:text-white sm:text-xs"
                          >
                            Keza Alice
                          </h3>
                          <p
                            className="text-sm sm:text-xs text-gray-400 dark:text-white"
                          >
                            keza@gmail.com
                          </p>
                        </div>
                      </div>
                    </td>
                    <td
                      className="py-3 px-5 border-b border-gray-200  text-sm sm:text-xs"
                    >
                      <p
                        className="text-green-500 whitespace-no-wrap"
                      >
                        Active
                      </p>
                    </td>
                    <td
                      className="px-5 py-3 border-b border-gray-200  text-sm"
                    >
                      <div
                        className="whitespace-no-wrap flex justify-left"
                      >
                        <div
                          className="xl:w-24"
                        >
                          admin
                        </div>
                      </div>
                    </td>
                    <td
                      className="px-5 py-3 border-b border-gray-200  text-[9px] md:text-sm"
                    >
                      <p
                        className="text-red-500 whitespace-no-wrap cursor-pointer"
                        onClick={[Function]}
                      >
                        Remove
                      </p>
                    </td>
                  </tr>
                  <tr
                    className="bg-light-bg dark:bg-dark-tertiary"
                  >
                    <td
                      className="border-b border-gray-200 py-2"
                    >
                      <div
                        className="flex items-left"
                      >
                        <span
                          className="hidden  ml-2 md:inline-block h-10 w-10 rounded-full overflow-hidden bg-gray-100 dark:bg-dark-tertiary"
                        >
                          <svg
                            className="h-full w-full text-gray-300 dark:text-white"
                            fill="currentColor"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M24 20.993V24H0v-2.996A14.977 14.977 0 0112.004 15c4.904 0 9.26 2.354 11.996 5.993zM16.002 8.999a4 4 0 11-8 0 4 4 0 018 0z"
                            />
                          </svg>
                        </span>
                        <div
                          className="flex flex-col  leading-4 px-3 py-2"
                        >
                          <h3
                            className="dark:text-white sm:text-xs"
                          >
                            Kamanzi Didider
                          </h3>
                          <p
                            className="text-sm sm:text-xs text-gray-400 dark:text-white"
                          >
                            kdidier@gmail.com
                          </p>
                        </div>
                      </div>
                    </td>
                    <td
                      className="py-3 px-5 border-b border-gray-200  text-sm sm:text-xs"
                    >
                      <p
                        className="text-green-500 whitespace-no-wrap"
                      >
                        Active
                      </p>
                    </td>
                    <td
                      className="px-5 py-3 border-b border-gray-200  text-sm"
                    >
                      <div
                        className="whitespace-no-wrap flex justify-left"
                      >
                        <div
                          className="xl:w-24"
                        >
                          trainee
                        </div>
                      </div>
                    </td>
                    <td
                      className="px-5 py-3 border-b border-gray-200  text-[9px] md:text-sm"
                    >
                      <p
                        className="text-red-500 whitespace-no-wrap cursor-pointer"
                        onClick={[Function]}
                      >
                        Remove
                      </p>
                    </td>
                  </tr>
                  <tr
                    className="bg-white dark:bg-dark-bg"
                  >
                    <td
                      className="border-b border-gray-200 py-2"
                    >
                      <div
                        className="flex items-left"
                      >
                        <span
                          className="hidden  ml-2 md:inline-block h-10 w-10 rounded-full overflow-hidden bg-gray-100 dark:bg-dark-tertiary"
                        >
                          <svg
                            className="h-full w-full text-gray-300 dark:text-white"
                            fill="currentColor"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M24 20.993V24H0v-2.996A14.977 14.977 0 0112.004 15c4.904 0 9.26 2.354 11.996 5.993zM16.002 8.999a4 4 0 11-8 0 4 4 0 018 0z"
                            />
                          </svg>
                        </span>
                        <div
                          className="flex flex-col  leading-4 px-3 py-2"
                        >
                          <h3
                            className="dark:text-white sm:text-xs"
                          >
                            cyifuzo Makombe
                          </h3>
                          <p
                            className="text-sm sm:text-xs text-gray-400 dark:text-white"
                          >
                            kaka@gmail.com
                          </p>
                        </div>
                      </div>
                    </td>
                    <td
                      className="py-3 px-5 border-b border-gray-200  text-sm sm:text-xs"
                    >
                      <p
                        className="text-green-500 whitespace-no-wrap"
                      >
                        Active
                      </p>
                    </td>
                    <td
                      className="px-5 py-3 border-b border-gray-200  text-sm"
                    >
                      <div
                        className="whitespace-no-wrap flex justify-left"
                      >
                        <div
                          className="xl:w-24"
                        >
                          coordinator
                        </div>
                      </div>
                    </td>
                    <td
                      className="px-5 py-3 border-b border-gray-200  text-[9px] md:text-sm"
                    >
                      <p
                        className="text-red-500 whitespace-no-wrap cursor-pointer"
                        onClick={[Function]}
                      >
                        Remove
                      </p>
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="pt-10 justify-center items-center text-center"
    >
      <div
        aria-label="navigation"
      >
        <ul
          className="inline-flex -space-x-px"
        >
          <li>
            <a
              className="py-2 px-3 text-primary bg-blue-50 border border-gray-300 hover:bg-blue-100 hover:text-primary dark:border-gray-700 dark:bg-gray-700 dark:text-white"
              href="/#link"
              onClick={[Function]}
            >
              1
            </a>
          </li>
          <li>
            <a
              className="py-2 px-3 leading-tight text-gray-500 bg-white border border-gray-300 hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white"
              href="/#link"
              onClick={[Function]}
            >
              2
            </a>
          </li>
          <li>
            <a
              aria-current="page"
              className="py-2 px-3 leading-tight text-gray-500 bg-white border border-gray-300 hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white"
              href="/#link"
              onClick={[Function]}
            >
              3
            </a>
          </li>
          <li>
            <a
              className="py-2 px-3 leading-tight text-gray-500 bg-white border border-gray-300 hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white"
              href="/#link"
              onClick={[Function]}
            >
              4
            </a>
          </li>
          <li>
            <a
              className="py-2 px-3 leading-tight text-gray-500 bg-white border border-gray-300 hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white"
              href="/#link"
              onClick={[Function]}
            >
              5
            </a>
          </li>
        </ul>
      </div>
    </div>
  </div>,
]
`;

exports[`Admin dashboard page Renders Session Page 1`] = `
Array [
  <div
    className="h-screen w-screen bg-black bg-opacity-30 backdrop-blur-sm absolute flex items-center justify-center px-4 hidden"
  >
    <div
      className="bg-white dark:bg-dark-bg w-full sm:w-3/4 md:w-1/2  xl:w-4/12 rounded-lg p-4 pb-8"
    >
      <div
        className="card-title w-full flex  flex-wrap justify-center items-center  "
      >
        <h3
          className="font-bold text-sm text-gray-700 text-center w-11/12 uppercase"
        >
          AddSession
        </h3>
        <hr
          className=" bg-primary border-b my-3 w-full"
        />
      </div>
      <div
        className="card-body"
      >
        <form
          className=" py-3 px-8"
        >
          <div
            className="input my-3 h-9 "
          >
            <div
              className="grouped-input flex items-center h-full w-full rounded-md"
            >
              <input
                className="border border-primary rounded outline-none px-5 font-sans dark:bg-dark-frame-bg dark:text-white text-xs py-2 w-full"
                name="name"
                placeholder="SessionName"
                type="text"
              />
            </div>
          </div>
          <div
            className="input my-3 h-9 "
          >
            <div
              className="grouped-input flex items-center h-full w-full rounded-md"
            >
              <input
                className=" border border-primary py-2 rounded outline-none px-5 dark:bg-dark-frame-bg dark:text-white font-sans text-xs w-full"
                name="name"
                placeholder="Description"
                type="text"
              />
            </div>
          </div>
          <div
            className="input my-3 h-9 "
          >
            <div
              className="grouped-input flex items-center h-full w-full rounded-md"
            >
              <input
                className="border border-primary py-2 rounded dark:bg-dark-frame-bg dark:text-white outline-none px-5 font-sans text-xs w-full"
                name="name"
                placeholder="Platform"
                type="text"
              />
            </div>
          </div>
          <div
            className="input my-3 h-9 "
          >
            <div
              className="grouped-input flex items-center h-full w-full rounded-md"
            >
              <input
                className="border border-primary py-2 dark:bg-dark-frame-bg dark:text-white rounded outline-none px-5 font-sans text-xs w-full"
                name="name"
                placeholder="Duration"
                type="time"
              />
            </div>
          </div>
          <div
            className="input my-3 h-9 "
          >
            <div
              className="grouped-input flex items-center h-full w-full rounded-md"
            >
              <input
                className=" border border-primary py-2 dark:bg-dark-frame-bg dark:text-white rounded outline-none px-5 font-sans text-xs w-full"
                name="name"
                placeholder="Organizer"
                type="text"
              />
            </div>
          </div>
          <div
            className="w-full flex justify-between"
          >
            <button
              className="btn info sm w-[30%] md:w-1/4 text-sm font-sans"
              data-testid="remove"
              onClick={[Function]}
            >
               
              Cancel
               
            </button>
            <button
              className="btn primary sm w-[30%] md:w-1/4 text-sm font-sans"
            >
               
              Save
               
            </button>
          </div>
        </form>
      </div>
    </div>
  </div>,
  <div
    className="min-h-full w-screen z-30 bg-black bg-opacity-30 backdrop-blur-sm absolute flex items-center justify-center px-4 hidden"
  >
    <div
      className="bg-white dark:bg-dark-bg w-full sm:w-3/4 md:w-1/2  xl:w-4/12 rounded-lg p-4 pb-8"
    >
      <div
        className="card-title w-full flex  flex-wrap justify-center items-center  "
      >
        <h3
          className="font-bold text-sm text-gray-700 dark:text-white text-center w-11/12"
        >
          DeleteSession
        </h3>
        <hr
          className=" bg-primary border-b my-3 w-full"
        />
      </div>
      <div
        className="card-body"
      >
        <form
          className=" py-3 px-8"
        >
          <div>
            <h2
              className="text-base dark:text-white text-center m-4"
            >
              reallydeleteSession
            </h2>
          </div>
          <div
            className="w-full flex justify-between"
          >
            <button
              className="btn info sm w-[30%] md:w-1/4 text-sm font-sans"
              data-testid="delete"
              onClick={[Function]}
            >
               
              Cancel
               
            </button>
            <button
              className="btn danger sm w-[30%] md:w-1/4 text-sm font-sans"
            >
               
              Delete
               
            </button>
          </div>
        </form>
      </div>
    </div>
  </div>,
  <div
    className="min-h-full w-screen z-30 bg-black bg-opacity-30 backdrop-blur-sm absolute flex items-center justify-center px-4 hidden"
  >
    <div
      className="bg-white dark:bg-dark-bg w-full sm:w-3/4 md:w-1/2  xl:w-4/12 rounded-lg p-4 pb-8"
    >
      <div
        className="card-title w-full flex  flex-wrap justify-center items-center  "
      >
        <h3
          className="font-bold text-sm text-gray-700 dark:text-white text-center w-11/12"
        >
          UpdateSession
        </h3>
        <hr
          className=" bg-primary border-b my-3 w-full"
        />
      </div>
      <div
        className="card-body"
      >
        <form
          className=" py-3 px-8"
        >
          <div
            className="input my-3 h-9 "
          >
            <div
              className="grouped-input flex items-center h-full w-full rounded-md"
            >
              <input
                className="border border-primary rounded outline-none dark:bg-dark-frame-bg dark:text-white px-5 font-sans text-xs py-2 w-full"
                name="name"
                type="text"
                value="demo"
              />
            </div>
          </div>
          <div
            className="input my-3 h-9 "
          >
            <div
              className="grouped-input flex items-center h-full w-full rounded-md"
            >
              <input
                className=" border border-primary py-2 rounded dark:bg-dark-frame-bg dark:text-white outline-none px-5 font-sans text-xs w-full"
                name="desc"
                type="text"
                value="Jointime"
              />
            </div>
          </div>
          <div
            className="input my-3 h-9 "
          >
            <div
              className="grouped-input flex items-center h-full w-full rounded-md"
            >
              <input
                className="border border-primary py-2 rounded dark:bg-dark-frame-bg dark:text-white outline-none px-5 font-sans text-xs w-full"
                name="place"
                type="text"
                value="Zoom"
              />
            </div>
          </div>
          <div
            className="input my-3 h-9 "
          >
            <div
              className="grouped-input flex items-center h-full w-full rounded-md"
            >
              <input
                className="border border-primary py-2 rounded outline-none dark:bg-dark-frame-bg dark:text-white px-5 font-sans text-xs w-full"
                name="duration"
                type="text"
                value="11am-12am"
              />
            </div>
          </div>
          <div
            className="input my-3 h-9 "
          >
            <div
              className="grouped-input flex items-center h-full w-full rounded-md"
            >
              <input
                className="border border-primary py-2 rounded outline-none px-5 dark:bg-dark-frame-bg dark:text-white font-sans text-xs w-full"
                name="organizer"
                type="text"
                value="John deo"
              />
            </div>
          </div>
          <div
            className="w-full flex justify-between"
          >
            <button
              className="btn info sm w-[30%] md:w-1/4 text-sm font-sans"
              onClick={[Function]}
            >
               
              Cancel
               
            </button>
            <button
              className="btn primary sm w-[30%] md:w-1/4 text-sm font-sans"
            >
               
              Save
               
            </button>
          </div>
        </form>
      </div>
    </div>
  </div>,
  <div
    className="bg-light-bg dark:bg-dark-frame-bg min-h-screen"
  >
    <div
      className="flex items-left px-8 lg:px-60 pt-24 pb-8"
    >
      <div
        className="space-x-8"
      >
        <button
          className="btn primary lg undefined"
          onClick={[Function]}
        >
           
          Session
           +
           
        </button>
      </div>
    </div>
    <div
      className="px-3 md:px-8"
    >
      <div
        className="bg-white dark:bg-dark-bg shadow-lg px-5 py-8 rounded-md w-full lg:w-[80%] lg:ml-52"
      >
        <div
          className=" flex items-center justify-between pb-6"
        >
          <div>
            <h2
              className="text-gray-800 dark:text-white font-semibold"
            >
              Availablesessions
            </h2>
          </div>
        </div>
        <div>
          <div
            className="-mx-4 sm:-mx-8 px-4 sm:px-8 py-4 overflow-x-auto"
          >
            <div
              className="inline-block w-full lg:min-w-full shadow rounded-lg overflow-hidden"
            >
              <table
                className="min-w-full leading-normal"
              >
                <thead>
                  <tr>
                    <th
                      className="p-6 border-b-2 border-gray-200 bg-gray-100 dark:bg-dark-tertiary text-left text-xs font-semibold text-gray-600 dark:text-white uppercase tracking-wider"
                    >
                      Session
                    </th>
                    <th
                      className="px-5 border-b-2 border-gray-200 bg-gray-100 dark:bg-dark-tertiary text-left text-xs font-semibold text-gray-600 dark:text-white uppercase tracking-wider"
                    >
                      Description
                    </th>
                    <th
                      className="px-5 py-3 border-b-2 border-gray-200 bg-gray-100 dark:bg-dark-tertiary text-left text-xs font-semibold text-gray-600 dark:text-white uppercase tracking-wider"
                    >
                      Platform
                    </th>
                    <th
                      className="px-5 py-3 border-b-2 border-gray-200 bg-gray-100 dark:bg-dark-tertiary text-left text-xs font-semibold text-gray-600 dark:text-white uppercase tracking-wider"
                    >
                      Duration
                    </th>
                    <th
                      className="px-5 py-3 border-b-2 border-gray-200 bg-gray-100 dark:bg-dark-tertiary text-left text-xs font-semibold text-gray-600 dark:text-white uppercase tracking-wider"
                    >
                      Organizer
                    </th>
                    <th
                      className="px-5 py-3 border-b-2 border-gray-200 bg-gray-100 dark:bg-dark-tertiary text-left text-xs font-semibold text-gray-600 dark:text-white uppercase tracking-wider"
                    >
                      Action
                    </th>
                  </tr>
                </thead>
                <tbody>
                  <tr>
                    <td
                      className="px-5 py-5 border-b border-gray-200 bg-white dark:bg-dark-bg text-sm"
                    >
                      <div
                        className="flex items-center"
                      >
                        <div>
                          <p
                            className="text-gray-900 dark:text-white whitespace-no-wrap"
                          >
                            Demo
                          </p>
                        </div>
                      </div>
                    </td>
                    <td
                      className="px-5 py-5 border-b border-gray-200 bg-white dark:bg-dark-bg text-sm"
                    >
                      <p
                        className="text-gray-900 dark:text-white whitespace-no-wrap"
                      >
                        Join on time
                      </p>
                    </td>
                    <td
                      className="px-5 py-5 border-b border-gray-200 bg-white dark:bg-dark-bg text-sm"
                    >
                      <p
                        className="text-gray-900 dark:text-white whitespace-no-wrap"
                      >
                        Zoom
                      </p>
                    </td>
                    <td
                      className="px-5 py-5 border-b border-gray-200 bg-white dark:bg-dark-bg text-sm"
                    >
                      <p
                        className="text-gray-900 dark:text-white whitespace-no-wrap"
                      >
                        11am - 12am
                      </p>
                    </td>
                    <td
                      className="px-5 py-5 border-b border-gray-200 bg-white dark:bg-dark-bg text-sm"
                    >
                      <p
                        className="text-gray-900 dark:text-white whitespace-no-wrap"
                      >
                        John deo
                      </p>
                    </td>
                    <td
                      className="px-5 py-5 text-gray-500 border-b border-gray-200 bg-white dark:bg-dark-bg text-lg"
                    >
                      <div
                        className="flex relative flex-row "
                      >
                        <div
                          className="cursor-pointer"
                          onClick={[Function]}
                        >
                          <svg
                            fill="currentColor"
                            height="1em"
                            stroke="currentColor"
                            strokeWidth="0"
                            style={
                              Object {
                                "color": undefined,
                              }
                            }
                            viewBox="0 0 192 512"
                            width="1em"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M96 184c39.8 0 72 32.2 72 72s-32.2 72-72 72-72-32.2-72-72 32.2-72 72-72zM24 80c0 39.8 32.2 72 72 72s72-32.2 72-72S135.8 8 96 8 24 40.2 24 80zm0 352c0 39.8 32.2 72 72 72s72-32.2 72-72-32.2-72-72-72-72 32.2-72 72z"
                            />
                          </svg>
                        </div>
                      </div>
                    </td>
                  </tr>
                  <tr>
                    <td
                      className="px-5 py-5 border-b border-gray-200 dark:bg-dark-tertiary bg-gray-100 text-sm"
                    >
                      <div
                        className="flex items-center"
                      >
                        <div>
                          <p
                            className="text-gray-900 dark:text-white whitespace-no-wrap"
                          >
                            Stand up
                          </p>
                        </div>
                      </div>
                    </td>
                    <td
                      className="px-5 py-5 border-b border-gray-200 bg-gray-100 dark:bg-dark-tertiary text-sm"
                    >
                      <p
                        className="text-gray-900 dark:text-white whitespace-no-wrap"
                      >
                        Join on time
                      </p>
                    </td>
                    <td
                      className="px-5 py-5 border-b border-gray-200 bg-gray-100 dark:bg-dark-tertiary text-sm"
                    >
                      <p
                        className="text-gray-900 dark:text-white whitespace-no-wrap"
                      >
                        Zoom
                      </p>
                    </td>
                    <td
                      className="px-5 py-5 border-b border-gray-200 bg-gray-100 dark:bg-dark-tertiary text-sm"
                    >
                      <p
                        className="text-gray-900 dark:text-white whitespace-no-wrap"
                      >
                        11am - 12am
                      </p>
                    </td>
                    <td
                      className="px-5 py-5 border-b border-gray-200 bg-gray-100 dark:bg-dark-tertiary text-sm"
                    >
                      <p
                        className="text-gray-900 dark:text-white whitespace-no-wrap"
                      >
                        John deo
                      </p>
                    </td>
                    <td
                      className="px-5 py-5 text-gray-500 border-b border-gray-200 cursor-pointer bg-gray-100 dark:bg-dark-tertiary text-lg"
                    >
                      <svg
                        fill="currentColor"
                        height="1em"
                        stroke="currentColor"
                        strokeWidth="0"
                        style={
                          Object {
                            "color": undefined,
                          }
                        }
                        viewBox="0 0 192 512"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M96 184c39.8 0 72 32.2 72 72s-32.2 72-72 72-72-32.2-72-72 32.2-72 72-72zM24 80c0 39.8 32.2 72 72 72s72-32.2 72-72S135.8 8 96 8 24 40.2 24 80zm0 352c0 39.8 32.2 72 72 72s72-32.2 72-72-32.2-72-72-72-72 32.2-72 72z"
                        />
                      </svg>
                    </td>
                  </tr>
                  <tr>
                    <td
                      className="px-5 py-5 border-b border-gray-200 bg-white dark:bg-dark-bg text-sm"
                    >
                      <div
                        className="flex items-center"
                      >
                        <div>
                          <p
                            className="text-gray-900 dark:text-white whitespace-no-wrap"
                          >
                            E-Level up
                          </p>
                        </div>
                      </div>
                    </td>
                    <td
                      className="px-5 py-5 border-b border-gray-200 bg-white dark:bg-dark-bg text-sm"
                    >
                      <p
                        className="text-gray-900 dark:text-white whitespace-no-wrap"
                      >
                        Join on time
                      </p>
                    </td>
                    <td
                      className="px-5 py-5 border-b border-gray-200 bg-white dark:bg-dark-bg text-sm"
                    >
                      <p
                        className="text-gray-900 dark:text-white whitespace-no-wrap"
                      >
                        Zoom
                      </p>
                    </td>
                    <td
                      className="px-5 py-5 border-b border-gray-200 bg-white dark:bg-dark-bg text-sm"
                    >
                      <p
                        className="text-gray-900 dark:text-white whitespace-no-wrap"
                      >
                        11am - 12am
                      </p>
                    </td>
                    <td
                      className="px-5 py-5 border-b border-gray-200 bg-white dark:bg-dark-bg text-sm"
                    >
                      <p
                        className="text-gray-900 dark:text-white whitespace-no-wrap"
                      >
                        John deo
                      </p>
                    </td>
                    <td
                      className="px-5 py-5 text-gray-500 border-b border-gray-200 bg-white cursor-pointer dark:bg-dark-bg text-lg"
                    >
                      <svg
                        fill="currentColor"
                        height="1em"
                        stroke="currentColor"
                        strokeWidth="0"
                        style={
                          Object {
                            "color": undefined,
                          }
                        }
                        viewBox="0 0 192 512"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M96 184c39.8 0 72 32.2 72 72s-32.2 72-72 72-72-32.2-72-72 32.2-72 72-72zM24 80c0 39.8 32.2 72 72 72s72-32.2 72-72S135.8 8 96 8 24 40.2 24 80zm0 352c0 39.8 32.2 72 72 72s72-32.2 72-72-32.2-72-72-72-72 32.2-72 72z"
                        />
                      </svg>
                    </td>
                  </tr>
                  <tr>
                    <td
                      className="px-5 py-5 border-b border-gray-200 bg-gray-100 dark:bg-dark-tertiary text-sm"
                    >
                      <div
                        className="flex items-center"
                      >
                        <div>
                          <p
                            className="text-gray-900 dark:text-white whitespace-no-wrap"
                          >
                            Code Review
                          </p>
                        </div>
                      </div>
                    </td>
                    <td
                      className="px-5 py-5 border-b border-gray-200 bg-gray-100 dark:bg-dark-tertiary text-sm"
                    >
                      <p
                        className="text-gray-900 dark:text-white whitespace-no-wrap"
                      >
                        Join on time
                      </p>
                    </td>
                    <td
                      className="px-5 py-5 border-b border-gray-200 bg-gray-100 dark:bg-dark-tertiary text-sm"
                    >
                      <p
                        className="text-gray-900 dark:text-white whitespace-no-wrap"
                      >
                        Zoom
                      </p>
                    </td>
                    <td
                      className="px-5 py-5 border-b border-gray-200 bg-gray-100 dark:bg-dark-tertiary text-sm"
                    >
                      <p
                        className="text-gray-900 dark:text-white whitespace-no-wrap"
                      >
                        11am - 12am
                      </p>
                    </td>
                    <td
                      className="px-5 py-5 border-b border-gray-200 bg-gray-100 dark:bg-dark-tertiary text-sm"
                    >
                      <p
                        className="text-gray-900 dark:text-white whitespace-no-wrap"
                      >
                        John deo
                      </p>
                    </td>
                    <td
                      className="px-5 py-5 text-gray-500 border-b border-gray-200 bg-gray-100 cursor-pointer dark:bg-dark-tertiary text-lg"
                    >
                      <svg
                        fill="currentColor"
                        height="1em"
                        stroke="currentColor"
                        strokeWidth="0"
                        style={
                          Object {
                            "color": undefined,
                          }
                        }
                        viewBox="0 0 192 512"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M96 184c39.8 0 72 32.2 72 72s-32.2 72-72 72-72-32.2-72-72 32.2-72 72-72zM24 80c0 39.8 32.2 72 72 72s72-32.2 72-72S135.8 8 96 8 24 40.2 24 80zm0 352c0 39.8 32.2 72 72 72s72-32.2 72-72-32.2-72-72-72-72 32.2-72 72z"
                        />
                      </svg>
                    </td>
                  </tr>
                  <tr>
                    <td
                      className="px-5 py-5 border-b border-gray-200 bg-white dark:bg-dark-bg text-sm"
                    >
                      <div
                        className="flex items-center"
                      >
                        <div>
                          <p
                            className="text-gray-900 dark:text-white whitespace-no-wrap"
                          >
                            Professional Skills
                          </p>
                        </div>
                      </div>
                    </td>
                    <td
                      className="px-5 py-5 border-b border-gray-200 bg-white dark:bg-dark-bg text-sm"
                    >
                      <p
                        className="text-gray-900 dark:text-white whitespace-no-wrap"
                      >
                        Join on time
                      </p>
                    </td>
                    <td
                      className="px-5 py-5 border-b border-gray-200 bg-white dark:bg-dark-bg text-sm"
                    >
                      <p
                        className="text-gray-900 dark:text-white whitespace-no-wrap"
                      >
                        Zoom
                      </p>
                    </td>
                    <td
                      className="px-5 py-5 border-b border-gray-200 bg-white dark:bg-dark-bg text-sm"
                    >
                      <p
                        className="text-gray-900 dark:text-white whitespace-no-wrap"
                      >
                        11am - 12am
                      </p>
                    </td>
                    <td
                      className="px-5 py-5 border-b border-gray-200 bg-white dark:bg-dark-bg text-sm"
                    >
                      <p
                        className="text-gray-900 dark:text-white whitespace-no-wrap"
                      >
                        John deo
                      </p>
                    </td>
                    <td
                      className="px-5 py-5 text-gray-500 border-b border-gray-200 cursor-pointer bg-white dark:bg-dark-bg text-lg"
                    >
                      <svg
                        fill="currentColor"
                        height="1em"
                        stroke="currentColor"
                        strokeWidth="0"
                        style={
                          Object {
                            "color": undefined,
                          }
                        }
                        viewBox="0 0 192 512"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M96 184c39.8 0 72 32.2 72 72s-32.2 72-72 72-72-32.2-72-72 32.2-72 72-72zM24 80c0 39.8 32.2 72 72 72s72-32.2 72-72S135.8 8 96 8 24 40.2 24 80zm0 352c0 39.8 32.2 72 72 72s72-32.2 72-72-32.2-72-72-72-72 32.2-72 72z"
                        />
                      </svg>
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`Admin dashboard page Renders cohort Page 1`] = `
Array [
  <div
    className="h-screen w-screen bg-black bg-opacity-30 backdrop-blur-sm absolute flex items-center justify-center px-4 hidden"
  >
    <div
      className="bg-white dark:bg-dark-bg w-screen md:w-1/2  xl:w-4/12 rounded-lg p-4 pb-8"
    >
      <div
        className="card-title w-full flex  flex-wrap justify-center items-center  "
      >
        <h3
          className="font-bold text-sm dark:text-white text-center w-11/12 uppercase"
        >
          AddCohort
        </h3>
        <hr
          className=" bg-primary border-b my-3 w-full"
        />
      </div>
      <div
        className="card-body"
      >
        <form
          className=" py-3 px-8"
        >
          <div
            className="input my-3 h-9 "
          >
            <div
              className="grouped-input flex items-center h-full w-full rounded-md"
            >
              <input
                className="border border-primary rounded outline-none px-5 dark:bg-dark-frame-bg dark:text-white font-sans text-xs py-2 w-full"
                name="name"
                placeholder="name"
                type="text"
              />
            </div>
          </div>
          <div
            className="input my-3 h-9 "
          >
            <div
              className="grouped-input flex items-center h-full w-full rounded-md"
            >
              <input
                className=" border border-primary py-2 dark:bg-dark-frame-bg dark:text-white rounded outline-none px-5 font-sans text-xs w-full"
                name="name"
                placeholder="Coordinator"
                type="text"
              />
            </div>
          </div>
          <div
            className="input my-3 h-9 "
          >
            <div
              className="grouped-input flex items-center h-full w-full rounded-md"
            >
              <input
                className="border border-primary py-2 dark:bg-dark-frame-bg dark:text-white rounded outline-none px-5 font-sans text-xs w-full"
                name="name"
                placeholder="Phase"
                type="text"
              />
            </div>
          </div>
          <div
            className="input my-3 h-9 "
          >
            <div
              className="grouped-input flex items-center h-full w-full rounded-md"
            >
              <input
                className="border border-primary py-2 dark:bg-dark-frame-bg dark:text-white rounded outline-none px-5 font-sans text-xs w-full"
                name="name"
                placeholder="StartingDate"
                type="date"
              />
            </div>
          </div>
          <div
            className="input my-3 h-9 "
          >
            <div
              className="grouped-input flex items-center h-full w-full rounded-md"
            >
              <input
                className=" border border-primary py-2 dark:bg-dark-frame-bg dark:text-white rounded outline-none px-5 font-sans text-xs w-full"
                name="name"
                placeholder="ClosingDate"
                type="date"
              />
            </div>
          </div>
          <div
            className="w-full flex justify-between"
          >
            <button
              className="btn info sm w-[30%] md:w-1/4 text-sm font-sans"
              data-testid="remove"
              onClick={[Function]}
            >
               
              Cancel
               
            </button>
            <button
              className="btn primary sm w-[30%] md:w-1/4 text-sm font-sans"
            >
               
              Save
               
            </button>
          </div>
        </form>
      </div>
    </div>
  </div>,
  <div
    className="min-h-full w-screen z-30 bg-black bg-opacity-30 backdrop-blur-sm absolute flex items-center justify-center px-4 hidden"
  >
    <div
      className="bg-white dark:bg-dark-bg w-full sm:w-3/4 md:w-1/2  xl:w-4/12 rounded-lg p-4 pb-8"
    >
      <div
        className="card-title w-full flex  flex-wrap justify-center items-center  "
      >
        <h3
          className="font-bold text-xl dark:text-white text-center w-11/12"
        >
          DeleteCohort
        </h3>
        <hr
          className=" bg-primary border-b my-3 w-full"
        />
      </div>
      <div
        className="card-body"
      >
        <form
          className=" py-3 px-8"
        >
          <div>
            <h2
              className="text-base dark:text-white text-center m-4"
            >
              reallyRemoveCohort
            </h2>
          </div>
          <div
            className="w-full flex justify-between"
          >
            <button
              className="btn info sm w-[30%] md:w-1/4 text-sm font-sans"
              data-testid="delete"
              onClick={[Function]}
            >
               
              Cancel
               
            </button>
            <button
              className="btn danger sm w-[30%] md:w-1/4 text-sm font-sans"
            >
               
              Delete
               
            </button>
          </div>
        </form>
      </div>
    </div>
  </div>,
  <div
    className="bg-light-bg dark:bg-dark-frame-bg min-h-screen"
  >
    <div
      className="flex items-left px-7 lg:px-60 pt-24 pb-8"
    >
      <div
        className="space-x-8 lg:ml-10"
      >
        <button
          className="btn primary lg undefined"
          data-testid="removeModel"
          onClick={[Function]}
        >
           
          Cohort
           +
           
        </button>
      </div>
    </div>
    <div
      className="px-3 md:px-8"
    >
      <div
        className="bg-white dark:bg-dark-bg shadow-lg px-5 py-8 rounded-md w-full lg:w-[80%] lg:ml-64"
      >
        <div
          className=" flex items-center justify-between pb-6"
        >
          <div>
            <h2
              className="text-gray-800 dark:text-white font-semibold"
            >
              CohortList
            </h2>
          </div>
        </div>
        <div>
          <div
            className="-mx-4 sm:-mx-8 px-4 sm:px-8 py-4 overflow-x-auto"
          >
            <div
              className="inline-block w-full lg:min-w-full shadow rounded-lg overflow-hidden"
            >
              <table
                className="min-w-full leading-normal"
              >
                <thead>
                  <tr>
                    <th
                      className="p-6 border-b-2 border-gray-200 bg-gray-100 dark:bg-dark-tertiary text-left text-xs font-semibold text-gray-600 dark:text-white uppercase tracking-wider"
                    >
                      name
                    </th>
                    <th
                      className="px-5  border-b-2 border-gray-200 bg-gray-100 dark:bg-dark-tertiary text-left text-xs font-semibold text-gray-600 dark:text-white uppercase tracking-wider"
                    >
                      Coordinator
                    </th>
                    <th
                      className="px-5 py-3 border-b-2 border-gray-200 bg-gray-100 dark:bg-dark-tertiary text-left text-xs font-semibold text-gray-600 dark:text-white uppercase tracking-wider"
                    >
                      Phase
                    </th>
                    <th
                      className="px-5 py-3 border-b-2 border-gray-200 bg-gray-100 dark:bg-dark-tertiary text-left text-xs font-semibold text-gray-600 dark:text-white uppercase tracking-wider"
                    >
                      StartingDate
                    </th>
                    <th
                      className="px-5 py-3 border-b-2 border-gray-200 bg-gray-100 dark:bg-dark-tertiary text-left text-xs font-semibold text-gray-600 dark:text-white uppercase tracking-wider"
                    >
                      ClosingDate
                    </th>
                    <th
                      className="px-5 py-3 border-b-2 border-gray-200 bg-gray-100 dark:bg-dark-tertiary text-left text-xs font-semibold text-gray-600 dark:text-white uppercase tracking-wider"
                    >
                      Action
                    </th>
                  </tr>
                </thead>
                <tbody>
                  <tr>
                    <td
                      className="px-5 py-5 border-b border-gray-200 bg-white dark:bg-dark-bg text-sm"
                    >
                      <div
                        className="flex items-center"
                      >
                        <div>
                          <p
                            className="text-gray-900 dark:text-white whitespace-no-wrap"
                          >
                            Cohort 5
                          </p>
                        </div>
                      </div>
                    </td>
                    <td
                      className="px-5 py-5 border-b border-gray-200 bg-white dark:bg-dark-bg text-sm"
                    >
                      <p
                        className="text-gray-900 dark:text-white whitespace-no-wrap"
                      >
                        john doe
                      </p>
                    </td>
                    <td
                      className="px-5 py-5 border-b border-gray-200 bg-white dark:bg-dark-bg text-sm"
                    >
                      <p
                        className="text-gray-900 dark:text-white whitespace-no-wrap"
                      >
                        Core Concept
                      </p>
                    </td>
                    <td
                      className="px-5 py-5 border-b border-gray-200 bg-white dark:bg-dark-bg text-sm"
                    >
                      <p
                        className="text-gray-900 dark:text-white whitespace-no-wrap"
                      >
                        1st Jan 2022
                      </p>
                    </td>
                    <td
                      className="px-5 py-5 border-b border-gray-200 bg-white dark:bg-dark-bg text-sm"
                    >
                      <p
                        className="text-gray-900 dark:text-white whitespace-no-wrap"
                      >
                        11th Dec 2022
                      </p>
                    </td>
                    <td
                      className="px-5 py-5 border-b border-gray-200 text-gray-500 cursor-pointer bg-white dark:bg-dark-bg text-lg"
                    >
                      <div
                        className="flex relative flex-row "
                      >
                        <div
                          className="cursor-pointer"
                          onClick={[Function]}
                        >
                          <svg
                            fill="currentColor"
                            height="1em"
                            stroke="currentColor"
                            strokeWidth="0"
                            style={
                              Object {
                                "color": undefined,
                              }
                            }
                            viewBox="0 0 192 512"
                            width="1em"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M96 184c39.8 0 72 32.2 72 72s-32.2 72-72 72-72-32.2-72-72 32.2-72 72-72zM24 80c0 39.8 32.2 72 72 72s72-32.2 72-72S135.8 8 96 8 24 40.2 24 80zm0 352c0 39.8 32.2 72 72 72s72-32.2 72-72-32.2-72-72-72-72 32.2-72 72z"
                            />
                          </svg>
                        </div>
                      </div>
                    </td>
                  </tr>
                  <tr>
                    <td
                      className="px-5 py-5 border-b border-gray-200 bg-gray-100 dark:bg-dark-tertiary text-sm"
                    >
                      <div
                        className="flex items-center"
                      >
                        <div>
                          <p
                            className="text-gray-900 dark:text-white whitespace-no-wrap"
                          >
                            Cohort 6
                          </p>
                        </div>
                      </div>
                    </td>
                    <td
                      className="px-5 py-5 border-b border-gray-200 bg-gray-100 dark:bg-dark-tertiary text-sm"
                    >
                      <p
                        className="text-gray-900 dark:text-white whitespace-no-wrap"
                      >
                        john doe
                      </p>
                    </td>
                    <td
                      className="px-5 py-5 border-b border-gray-200 bg-gray-100 dark:bg-dark-tertiary text-sm"
                    >
                      <p
                        className="text-gray-900 dark:text-white whitespace-no-wrap"
                      >
                        Core Concept
                      </p>
                    </td>
                    <td
                      className="px-5 py-5 border-b border-gray-200 bg-gray-100 dark:bg-dark-tertiary text-sm"
                    >
                      <p
                        className="text-gray-900 dark:text-white whitespace-no-wrap"
                      >
                        1st Jan 2022
                      </p>
                    </td>
                    <td
                      className="px-5 py-5 border-b border-gray-200 bg-gray-100 dark:bg-dark-tertiary text-sm"
                    >
                      <p
                        className="text-gray-900 dark:text-white whitespace-no-wrap"
                      >
                        11th Dec 2022
                      </p>
                    </td>
                    <td
                      className="px-5 py-5 border-b border-gray-200 text-gray-500 cursor-pointer bg-gray-100 dark:bg-dark-tertiary text-lg"
                    >
                      <svg
                        fill="currentColor"
                        height="1em"
                        stroke="currentColor"
                        strokeWidth="0"
                        style={
                          Object {
                            "color": undefined,
                          }
                        }
                        viewBox="0 0 192 512"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M96 184c39.8 0 72 32.2 72 72s-32.2 72-72 72-72-32.2-72-72 32.2-72 72-72zM24 80c0 39.8 32.2 72 72 72s72-32.2 72-72S135.8 8 96 8 24 40.2 24 80zm0 352c0 39.8 32.2 72 72 72s72-32.2 72-72-32.2-72-72-72-72 32.2-72 72z"
                        />
                      </svg>
                    </td>
                  </tr>
                  <tr>
                    <td
                      className="px-5 py-5 border-b border-gray-200 bg-white dark:bg-dark-bg text-sm"
                    >
                      <div
                        className="flex items-center"
                      >
                        <div>
                          <p
                            className="text-gray-900 dark:text-white whitespace-no-wrap"
                          >
                            Cohort 7
                          </p>
                        </div>
                      </div>
                    </td>
                    <td
                      className="px-5 py-5 border-b border-gray-200 bg-white dark:bg-dark-bg text-sm"
                    >
                      <p
                        className="text-gray-900 dark:text-white whitespace-no-wrap"
                      >
                        john doe
                      </p>
                    </td>
                    <td
                      className="px-5 py-5 border-b border-gray-200 bg-white dark:bg-dark-bg text-sm"
                    >
                      <p
                        className="text-gray-900 dark:text-white whitespace-no-wrap"
                      >
                        Core Concept
                      </p>
                    </td>
                    <td
                      className="px-5 py-5 border-b border-gray-200 bg-white dark:bg-dark-bg text-sm"
                    >
                      <p
                        className="text-gray-900 dark:text-white whitespace-no-wrap"
                      >
                        1st Jan 2022
                      </p>
                    </td>
                    <td
                      className="px-5 py-5 border-b border-gray-200 bg-white dark:bg-dark-bg text-sm"
                    >
                      <p
                        className="text-gray-900 dark:text-white whitespace-no-wrap"
                      >
                        11th Dec 2022
                      </p>
                    </td>
                    <td
                      className="px-5 py-5 border-b border-gray-200 text-gray-500 cursor-pointer bg-white dark:bg-dark-bg text-lg"
                    >
                      <svg
                        fill="currentColor"
                        height="1em"
                        stroke="currentColor"
                        strokeWidth="0"
                        style={
                          Object {
                            "color": undefined,
                          }
                        }
                        viewBox="0 0 192 512"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M96 184c39.8 0 72 32.2 72 72s-32.2 72-72 72-72-32.2-72-72 32.2-72 72-72zM24 80c0 39.8 32.2 72 72 72s72-32.2 72-72S135.8 8 96 8 24 40.2 24 80zm0 352c0 39.8 32.2 72 72 72s72-32.2 72-72-32.2-72-72-72-72 32.2-72 72z"
                        />
                      </svg>
                    </td>
                  </tr>
                  <tr>
                    <td
                      className="px-5 py-5 border-b border-gray-200 bg-gray-100 dark:bg-dark-tertiary text-sm"
                    >
                      <div
                        className="flex items-center"
                      >
                        <div>
                          <p
                            className="text-gray-900 dark:text-white whitespace-no-wrap"
                          >
                            Cohort 8
                          </p>
                        </div>
                      </div>
                    </td>
                    <td
                      className="px-5 py-5 border-b border-gray-200 bg-gray-100 dark:bg-dark-tertiary text-sm"
                    >
                      <p
                        className="text-gray-900 dark:text-white whitespace-no-wrap"
                      >
                        john doe
                      </p>
                    </td>
                    <td
                      className="px-5 py-5 border-b border-gray-200 bg-gray-100 dark:bg-dark-tertiary text-sm"
                    >
                      <p
                        className="text-gray-900 dark:text-white whitespace-no-wrap"
                      >
                        Core Concept
                      </p>
                    </td>
                    <td
                      className="px-5 py-5 border-b border-gray-200 bg-gray-100 dark:bg-dark-tertiary text-sm"
                    >
                      <p
                        className="text-gray-900 dark:text-white whitespace-no-wrap"
                      >
                        1st Jan 2022
                      </p>
                    </td>
                    <td
                      className="px-5 py-5 border-b border-gray-200 bg-gray-100 dark:bg-dark-tertiary text-sm"
                    >
                      <p
                        className="text-gray-900 dark:text-white whitespace-no-wrap"
                      >
                        11th Dec 2022
                      </p>
                    </td>
                    <td
                      className="px-5 py-5 border-b border-gray-200 text-gray-500 cursor-pointer bg-gray-100 dark:bg-dark-tertiary text-lg"
                    >
                      <svg
                        fill="currentColor"
                        height="1em"
                        stroke="currentColor"
                        strokeWidth="0"
                        style={
                          Object {
                            "color": undefined,
                          }
                        }
                        viewBox="0 0 192 512"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M96 184c39.8 0 72 32.2 72 72s-32.2 72-72 72-72-32.2-72-72 32.2-72 72-72zM24 80c0 39.8 32.2 72 72 72s72-32.2 72-72S135.8 8 96 8 24 40.2 24 80zm0 352c0 39.8 32.2 72 72 72s72-32.2 72-72-32.2-72-72-72-72 32.2-72 72z"
                        />
                      </svg>
                    </td>
                  </tr>
                  <tr>
                    <td
                      className="px-5 py-5 border-b border-gray-200 bg-white dark:bg-dark-bg text-sm"
                    >
                      <div
                        className="flex items-center"
                      >
                        <div>
                          <p
                            className="text-gray-900 dark:text-white whitespace-no-wrap"
                          >
                            Cohort 9
                          </p>
                        </div>
                      </div>
                    </td>
                    <td
                      className="px-5 py-5 border-b border-gray-200 bg-white dark:bg-dark-bg text-sm"
                    >
                      <p
                        className="text-gray-900 dark:text-white whitespace-no-wrap"
                      >
                        john doe
                      </p>
                    </td>
                    <td
                      className="px-5 py-5 border-b border-gray-200 bg-white dark:bg-dark-bg text-sm"
                    >
                      <p
                        className="text-gray-900 dark:text-white whitespace-no-wrap"
                      >
                        Core Concept
                      </p>
                    </td>
                    <td
                      className="px-5 py-5 border-b border-gray-200 bg-white dark:bg-dark-bg text-sm"
                    >
                      <p
                        className="text-gray-900 dark:text-white whitespace-no-wrap"
                      >
                        1st Jan 2022
                      </p>
                    </td>
                    <td
                      className="px-5 py-5 border-b border-gray-200 bg-white dark:bg-dark-bg text-sm"
                    >
                      <p
                        className="text-gray-900 dark:text-white whitespace-no-wrap"
                      >
                        11th Dec 2022
                      </p>
                    </td>
                    <td
                      className="px-5 py-5 border-b border-gray-200 text-gray-500 cursor-pointer bg-white dark:bg-dark-bg text-lg"
                    >
                      <svg
                        fill="currentColor"
                        height="1em"
                        stroke="currentColor"
                        strokeWidth="0"
                        style={
                          Object {
                            "color": undefined,
                          }
                        }
                        viewBox="0 0 192 512"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M96 184c39.8 0 72 32.2 72 72s-32.2 72-72 72-72-32.2-72-72 32.2-72 72-72zM24 80c0 39.8 32.2 72 72 72s72-32.2 72-72S135.8 8 96 8 24 40.2 24 80zm0 352c0 39.8 32.2 72 72 72s72-32.2 72-72-32.2-72-72-72-72 32.2-72 72z"
                        />
                      </svg>
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;
